# test_log4cpp

./: .gitignore  CMakeLists.txt  Main.cpp
